# ROIvert

./: .gitignore  CMakeLists.txt  ChartStyle.cpp  ChartStyle.h  FileIO.cpp  FileIO.h  README.md  Roivert.pri  Roivert.pro  Roivert.rc  Roivert.sln  Roivert.vcxproj  Roivert.vcxproj.filters  colorpicker.cpp  colorpicker.h  contrastwidget.cpp  contrastwidget.h  displaysettings.cpp  displaysettings.h  foo.json  foo.xml  imageroiviewer.cpp  imageroiviewer.h  imageview integration tasklist.txt  license.txt  main.cpp  readme.md  resource.h  roi.cpp  roi.h  rois.json  roivert.cpp  roivert.h  roivert.qrc  roivert.ui  roivertcore.h  t1.csv  toolwindows.cpp  toolwindows.h  tracecomputer.cpp  (+8 more)
bak/: ROI.h  TraceView.cpp  TraceView.h  imageroiviewer.cpp  imageroiviewer.h
bak/TraceChartImpl/: Axis.cpp  Axis.h  Series.cpp  Series.h
icons/dark/: index.theme
icons/light/: index.theme
include/: CMakeLists.txt  ChartStyle.h  DialogWithSettings.h  DisplaySettings.h  DockWidgetWithSettings.h  FileIO.h  ImageDataTableModel.h  ImageDataWindow.h  ImageLoadingProgressWindow.h  ImageView.h  ROIVertEnums.h  ROIVertSettings.h  ResetDialog.h  Settingsable.h  TraceView.h  VideoData.h  ZoomPan.h  roivert.h  roivertcore.h
include/ROI/: CMakeLists.txt  ROI.h  ROIController.h  ROISelector.h  ROIShape.h  ROIStyle.h  ROITrace.h  ROIs.h
include/dockwidgets/: CMakeLists.txt  FileIOWidget.h  ImageDataWidget.h  ImageSettingsWidget.h  StyleWidget.h  TraceViewWidget.h
include/dockwindows/: StyleWindow.h
include/widgets/: CMakeLists.txt  ChartControlWidget.h  ColormapPickWidget.h  ContrastWidget.h  ContrastWidgetImpl.h  ProjectionPickWidget.h  RGBWidget.h  RidgeLineWidget.h  SmoothingPickWidget.h  TraceChartWidget.h  VideoControllerWidget.h
include/widgets/TraceChartImpl/: Core.h  Series.h
old/: ContrastWidget.cpp
src/: CMakeLists.txt  ChartStyle.cpp  DialogWithSettings.cpp  DisplaySettings.cpp  DockWidgetWithSettings.cpp  FileIO.cpp  ImageDataTableModel.cpp  ImageDataWindow.cpp  ImageLoadingProgressWindow.cpp  ImageView.cpp  ROIVertSettings.cpp  ResetDialog.cpp  Settingsable.cpp  TraceView.cpp  VideoData.cpp  ZoomPan.cpp  main.cpp  roivert.cpp  roivert.ui
src/ROI/: CMakeLists.txt  ROI.cpp  ROIController.cpp  ROISelector.cpp  ROIShape.cpp  ROIStyle.cpp  ROITrace.cpp  ROIs.cpp
src/dockwidgets/: CMakeLists.txt  FileIOWidget.cpp  ImageDataWidget.cpp  ImageSettingsWidget.cpp  StyleWidget.cpp  TraceViewWidget.cpp
src/dockwindows/: StyleWindow.cpp
src/widgets/: CMakeLists.txt  ChartControlWidget.cpp  ColorPickWidget.cpp  ColorPickWidget.h  ColormapPickWidget.cpp  ColormapPickWidget.h  ContrastPickWidget.cpp  ContrastPickWidget.h  ContrastWidget.cpp  ContrastWidget.h  ContrastWidgetImpl.cpp  ProjectionPickWidget.cpp  ProjectionPickWidget.h  RGBWidget.cpp  RidgeLineWidget.cpp  SmoothingPickWidget.cpp  SmoothingPickWidget.h  TraceChartAxis.cpp  TraceChartSeries.cpp  TraceChartWidget.cpp  VideoControllerWidget.cpp
src/widgets/TraceChartImpl/: Series.cpp
test/: CMakeLists.txt  TestBase.h  main.cpp  roiverttestdata.json  tChartStyle.cpp  tChartStyle.h  tColormapPickWidget.cpp  tColormapPickWidget.h  tContrastWidget.cpp  tContrastWidget.h  tDisplaySettings.cpp  tDisplaySettings.h  tFileIO.cpp  tFileIO.h  tMiscSmallWidgets.cpp  tMiscSmallWidgets.h  tROIStyle.cpp  tROIStyle.h  tROIs.cpp  tROIs.h  tSettings.cpp  tSettings.h  tStyleWidget.cpp  tStyleWidget.h  tTraceChartWidget.cpp  tTraceChartWidget.h  tTraceViewWidget.cpp  tTraceViewWidget.h  tVideoControllerWidget.cpp  tVideoControllerWidget.h  tVideoData.cpp  tVideoData.h  tWorkflow.cpp  tWorkflow.h  test.h  testUtils.cpp  testUtils.h  tmain.cpp
test_resources/: roivert_testdata_multistack_1.tiff  roivert_testdata_multistack_2.tiff  roivert_testdata_multistack_3.tiff  roivert_testdata_multistack_4.tiff  roivert_testdata_onestack.tiff  roivert_testdata_onestack_deadpix.tiff  roivert_testdata_singleframe_1.tiff  roivert_testdata_singleframe_2.tiff  roivert_testdata_singleframe_3.tiff  roivert_testdata_singleframe_4.tiff  roivert_testdata_singleframe_5.tiff  roivert_testdata_singleframe_6.tiff  roivert_testdata_singleframe_7.tiff  roivert_testdata_singleframe_8.tiff  roiverttestdata.json  roiverttestdata.tiff  roiverttestdata_deadpix.tiff  roiverttestdata_mf1.tiff  roiverttestdata_mf2.tiff  roiverttestdata_mf3.tiff  roiverttestdata_mf4.tiff  roiverttestdata_mf5.tiff  roiverttestdata_mf6.tiff  roiverttestdata_mf7.tiff
